Done with the code successfully

--- a/userproductservice/src/main/resources/application.properties
+++ b/userproductservice/src/main/resources/application.properties
@@ -3,4 +3,10 @@ spring.data.mongodb.database=trackdb2
 spring.data.mongodb.uri=mongodb://localhost:27017
 server.error.include-message=always
 
+eureka.client.serviceUrl.default=http://localhost:8761/eureka/
+spring.application.name= user-product-service
+eureka.client.fetchRegistry=true
+eureka.client.registerWithEureka=true
+
+
 
