--- a/Gateway/src/main/resources/application.properties
+++ b/Gateway/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 server.port=9002
+eureka.client.serviceUrl.default=http://localhost:8761/eureka/
+spring.application.name= Gateway
+eureka.client.fetchRegistry=true
+eureka.client.registerWithEureka=true
