--- a/userauthservice/src/main/resources/application.properties
+++ b/userauthservice/src/main/resources/application.properties
@@ -1,7 +1,10 @@
-server.port=8082
+server.port=8090
 spring.datasource.url=jdbc:mysql://localhost:3306/user_db_db
 spring.datasource.username=root
 spring.datasource.password=585858
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show_sql=true
-
+eureka.client.serviceUrl.default=http://localhost:8761/eureka/
+spring.application.name= user-auth-service
+eureka.client.fetchRegistry=true
+eureka.client.registerWithEureka=true
