--- a/userauthservice/src/main/resources/application.properties
+++ b/userauthservice/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8090
-spring.datasource.url=jdbc:mysql://localhost:3306/user_db_db
+spring.datasource.url=jdbc:mysql://localhost:3306/CustomerDB
 spring.datasource.username=root
 spring.datasource.password=585858
 spring.jpa.hibernate.ddl-auto=update
